--- a/views/public/views/help-dialog.pug
+++ b/views/public/views/help-dialog.pug
@@ -6,24 +6,24 @@
             .active(tab-name="help")
                 .heading.no-margin
                     span.site #{config.siteName}
-                    h1 Get Help
-                    p.subhead Help using #{config.siteName}.
+                    h1 获取帮助
+                    p.subhead 帮助您使用#{config.siteName}.
                 .content
-                    h3 Getting an account
-                    p You can sign in or create a #{config.siteName} account by clicking Get Started in the top navigation bar. Once you do this, you can enter your current account details or create a new one. We also allow authentication through various third-party services, if you would prefer that.
-                    h3 Placing pixels
-                    p Placing pixels is easy. Pan over to the area you want to place the pixel, zoom in, select your colour by clicking on it in the palette, and click where you want to place it.
-                    h3 Keyboard Controls
-                    p You can use the following keyboard controls on #{config.siteName}:
+                    h3 获取帐户
+                    p 您可以通过单击顶部导航栏中的“开始”来登录或创建 #{config.siteName} 帐户。完成此操作后，您可以输入当前帐户详细信息或创建一个新帐户。如果您愿意，我们还允许通过各种第三方服务进行身份验证。
+                    h3 放置像素
+                    p 放置像素很容易。拖动鼠标或手指到要放置像素的区域，放大，通过在调色板中单击来选择颜色，然后单击要放置的位置。
+                    h3 键盘控制
+                    p 您可以使用以下键盘控件：
                     ul
-                        li #[kbd G]: Toggle grid.
-                        li #[kbd Space]: Toggle zoom in/out.
-                        li #[kbd Esc]: Exit colour picker, exit dialog, deselect current colour.
-                        li #[kbd P]: Select the current colour under your mouse pointer #[em (donors only)].
-                        li #[kbd &#x25B2; / W]: Pan upward
-                        li #[kbd &#x25BC; / S]: Pan downward
-                        li #[kbd &#x25C0; / A]: Pan to the left
-                        li #[kbd &#x25B6; / D]: Pan to the right
-                    h3 Other topics
-                    p If you need help with anything else, please #[a(href="https://discord.gg/CgC8FTg") join our Discord here] so we can help you out.
-        .dialog-footer.align-end: a.btn.btn-popping(data-dialog-dismiss=true) Close
+                        li #[kbd G]: 切换网格。
+                        li #[kbd Space]: 切换放大/缩小。
+                        li #[kbd Esc]: 退出颜色选择器，退出对话框，取消选择当前颜色。
+                        li #[kbd P]: 选择鼠标指针下的当前颜色 #[em (仅限捐赠者)]。
+                        li #[kbd &#x25B2; / W]: 向上平移
+                        li #[kbd &#x25BC; / S]: 向下平移
+                        li #[kbd &#x25C0; / A]: 向左平移
+                        li #[kbd &#x25B6; / D]: 向右平移
+                    h3 其他事项
+                    p 如果您在其他方面需要帮助，请#[a(href="https://discord.gg/CgC8FTg") 在此处加入我们的 Discord]，以便我们为您提供帮助。
+        .dialog-footer.align-end: a.btn.btn-popping(data-dialog-dismiss=true) 关闭
