--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,7 +9,7 @@ block dependencies
 - if(typeof navbarSupportsTopMode === "undefined") navbarSupportsTopMode = false;
 - if(typeof isPoppedOut === "undefined") isPoppedOut = false;
 - var userAdmin = user ? user.admin : false, userMod = user ? user.moderator || userAdmin : false;
-- if(typeof needsHelp === "undefined") needsHelp = false;
+- if(typeof needsHelp === "undefined") needsHelp = true;
 - var resourceVersion = "10"; // Increment this when you make a change to the HTML that absolutely requires CSS or JS refreshing
 - css = resources.css.concat(css);
 - var bodyClasses = ["fixed-navbar"];
